--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,15 +53,15 @@ jobs:
             echo "REL_VERSION_STRICT=${GITHUB_REF_NAME#?}" >> $GITHUB_ENV
           else
             echo "Using BRANCH mode: v$BASE_DEV_VERSION-dev+$GITHUB_RUN_NUMBER"
-            echo "REL_VERSION=v$BASE_DEV_VERSION-dev.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
-            echo "REL_VERSION_STRICT=$BASE_DEV_VERSION-dev.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+            echo "REL_VERSION=v$BASE_DEV_VERSION-dev+$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+            echo "REL_VERSION_STRICT=$BASE_DEV_VERSION-dev+$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
           fi
 
       - name: Set Version
         run: |
           curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep linux_amd64 | grep -v .gz | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
           mv ./dasel /usr/local/bin/dasel
-          dasel put string --plain -f pyproject.toml .tool.poetry.version "$REL_VERSION_STRICT"
+          dasel put string -f pyproject.toml .tool.poetry.version "$REL_VERSION_STRICT"
           cat pyproject.toml
 
       - uses: actions/setup-node@v3
