--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,9 @@ jobs:
             echo "REL_VERSION=$GITHUB_REF_NAME" >> $GITHUB_ENV
             echo "REL_VERSION_STRICT=${GITHUB_REF_NAME#?}" >> $GITHUB_ENV
           else
-            echo "Using BRANCH mode: v$BASE_DEV_VERSION-dev+$GITHUB_RUN_NUMBER"
-            echo "REL_VERSION=v$BASE_DEV_VERSION-dev+$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
-            echo "REL_VERSION_STRICT=$BASE_DEV_VERSION-dev+$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+            echo "Using BRANCH mode: v$BASE_DEV_VERSION-dev.$GITHUB_RUN_NUMBER"
+            echo "REL_VERSION=v$BASE_DEV_VERSION-dev.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+            echo "REL_VERSION_STRICT=$BASE_DEV_VERSION-dev.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
           fi
 
       - name: Set Version
