--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,7 @@ jobs:
           path: dist
 
       - name: "Create release"
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/github-script@v6
         with:
           github-token: "${{ secrets.BOT_TOKEN }}"
