--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,13 +37,12 @@ jobs:
 
       - name: Download Dasel
         run: |
-          curl -LO https://github.com/TomWright/dasel/releases/latest/download/dasel_linux_amd
-          mv dasel_linux_amd64 dasel
-          chmod +x dasel
+          curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep linux_amd64 | grep -v .gz | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
+          mv ./dasel /usr/local/bin/dasel
 
       - name: Get version
         id: version
-        run: echo "::set-output name=version::$(cat pyproject.toml | ./dasel -r toml .tool.poetry.version)"
+        run: run: echo "::set-output name=version::$(dasel select -f pyproject.toml .tool.poetry.version)"
 
       - name: Build and push
         uses: docker/build-push-action@v3
