--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Get version
         id: version
-        run: run: echo "::set-output name=version::$(dasel select -f pyproject.toml .tool.poetry.version)"
+        run: echo "::set-output name=version::$(dasel select -f pyproject.toml .tool.poetry.version)"
 
       - name: Build and push
         uses: docker/build-push-action@v3
