--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -24,8 +24,8 @@
         "@codemirror/state": "~6.0.1",
         "@codemirror/view": "~6.0.1",
         "@codemirror/theme-one-dark": "~6.0.0",
-        "@emotion/react": "~11.4.1",
-        "@emotion/styled": "~11.3.0",
+        "@emotion/react": "^11.4.1",
+        "@emotion/styled": "^11.3.0",
         "@jupyter-widgets/jupyterlab-manager": "^3.1.0",
         "@jupyterlab/coreutils": "^5.4.3",
         "@jupyterlab/outputarea": "^3.3.2",
