--- a/cnext_app/.env
+++ b/cnext_app/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_SERVER_SOCKET_ENDPOINT = "http://localhost:4000"
+NEXT_PUBLIC_SERVER_SOCKET_ENDPOINT = "/"
 SENTRY_PROJECT = "nextjs"
 SENTRY_ORG = "cnext"
