--- a/cnext_server/server/pyproject.toml
+++ b/cnext_server/server/pyproject.toml
@@ -26,6 +26,7 @@ netron = "^5.7.8"
 sentry-sdk = "^1.5.12"
 protobuf = "3.20.1"
 pyreadline = "^2.1"
+jupyter-resource-usage = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 
